--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     background-color: #2D25A0;
     align-items: center;
+    padding: 30px 0;
 }
 .title-area {
     color: #fff;
