--- a/style.css
+++ b/style.css
@@ -1,10 +1,47 @@
+
+/* common styles */
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body {
     margin: 0;
     padding: 0;
-   
+    font-family: 'Poppins', sans-serif;
 }
+.btn {
+   
+    border-radius: 10px;
+    padding: 10px 20px;
+    align-items: center;
+    font-size:  20px;
+    background-color: aquamarine;
+    margin-bottom: 20px;
+}
+
+/* common style ends */
+
+/* signup area  */
+    .sign-up-area {
+        padding: 20px 10px;
+        background-color:lightgrey;
+        display: flex;
+        justify-content: flex-end;
+    }
+   .logo img {
+        border-radius: 10px;
+        height:60px;
+        width:60px;
+        margin-right: 850px;
+    }
+    .form input {
+        padding: 10px 0;
+        border-radius: 5px;
+        font-size:18px;
+        text-shadow: lightblue;
+    }
+/* signup area ends */
+
+/* header area */
 .header {
     display: flex;
     background-color: #2D25A0;
@@ -13,7 +50,6 @@ body {
 }
 .title-area {
     color: #fff;
-    font-family: 'Poppins', sans-serif;
     font-size: 50px;
     width: 50%;
     margin-left: 50px;
@@ -21,15 +57,7 @@ body {
     font-weight: bold;
     line-height: 80px;
 }
-.title-area button {
-    font-family: Poppins;
-    border-radius: 10px;
-    padding: 10px 20px;
-    align-items: center;
-    font-size:  16px;
-    background-color: aquamarine;
-    margin-bottom: 20px;
-}
+
 .image-area {
     width: 50%;
 }
@@ -42,22 +70,99 @@ body {
 
 /* top players style */
 .top-players {
-
+    
 }
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    margin-right: 10px;
-    width: 330px;
-    height: 474px;
+    margin: 50px ;
+    font-family: ;
+    
+    
+    
+    
+   
 
 }
 .player {
    
-    align-items: center;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    margin-right: 20px;
+    margin-bottom: 10px;
+    width: 330px;
+    height: 474px;
+    padding: 30px;
+    
+    
+
 }
  .player img {
     width: 300px;
-    height: 256;
-} 
+    height: 256px;
+}
+
+/* footer */
+
+.container {
+    margin: 50px ;
+    text-align: center;
+    
+}
+.container a {
+    margin : 10px;
+    font-size: 25px;
+}
+.copyright {
+    font-size: 18px;
+    color:;
+}
+
+/* --
+media queries  */
+
+
+@media (max-width: 768px) {
+    .sign-up-area {
+        flex-direction: column;
+        text-align: center;
+    }
+    .sign-up-area img {
+        margin-left: 40%;
+    }
+    .header {
+        flex-direction: column;
+    }
+    .title-area {
+        width: 50%;
+        text-align: center;
+        padding: 0;
+    }
+    .players {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .logo-area img {
+        width: 100%;
+    }
+}
+@media  (max-width: 688px) {
+    .sign-up-area {
+        flex-direction: column;
+        text-align: center;
+    }
+    .header {
+        flex-direction: column;
+    }
+    .title-area {
+        width: 50%;
+    }
+    .players {
+            grid-template-columns: repeat(1, 1fr);
+
+    }
+    .logo-area img {
+        width: 100%;
+    }
+}
+
+
+
