--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ media queries  */
         grid-template-columns: repeat(1, 1fr);
     }
     .logo-area img {
-        width: auto;
+        width: 30%;
     }
 }
 /* 
@@ -186,7 +186,7 @@ tablat devices */
     }
   
     .logo-area img {
-        width: 300px;
+        width: 30%;
     } 
     
 }
